# options-pricing

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/app/: main.py  schemas.py
backend/app/services/: pricing.py
backend/options_pricing_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_api.py  test_pricing.py
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: options-dashboard.tsx
frontend/src/components/ui/: button.tsx
frontend/src/lib/: api.ts  types.ts
notebooks/: options_pricing_walkthrough.ipynb
